fix alignment and colors

--- a/css/main.sass
+++ b/css/main.sass
@@ -94,14 +94,14 @@
   font-weight: 900
   font-size: 60px
   padding: 18px 28px
-  color: #330d48
-  background-color: #00d300
-  border-color: #00d300
+  color: #00d300
+  background-color: #fff
+  border-color: #330d48
   border-width: 2px
   &:hover
-    filter: brightness(100%)
-    background-color: #00d300
-    border-color: #00d300
+    color: #330d48
+    background-color: #fff
+    border-color: #330d48
     border-width: 2px
 
 .btn-primary
